--- a/index.html
+++ b/index.html
@@ -8,10 +8,32 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
+    <!-- Css -->
+    <link rel="stylesheet" href="./assets/css/style.css">
+
     <title>Carousel Objects</title>
 </head>
 <body>
 
+    <div id="container">
+        <div class="carousel">
+
+            <div class="slides">
+                <!-- button prev -->
+                <div>
+                    <span class="btn" id="prev">&#11164;</span>
+                </div>
+                
+
+                <!-- button next -->
+                <div>
+                    <span class="btn" id="next">&#11166;</span>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
 
 
     <!-- Bootstrap -->
