--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <body>
     
     <div class="container">
-        <div class="row justify-content-center pt-5">
+        <div class="carousel d-flex justify-content-center">
             
-            <div class="col-10 slides position-relative p-0">
+            <div class="slides position-relative p-0">
                 <!-- button prev -->
                 <div>
                     <span class="btn" id="prev">&#11164;</span>
