--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
+
     <!-- Css -->
     <link rel="stylesheet" href="./assets/css/style.css">
 
@@ -26,7 +28,21 @@
     </div>
     
     <div class="container container-thumb">
+
+        <!-- Buttons Play-Stop -->
+        <div class="p-0 position-absolute timebtn">
+
+            <button type="button" class="btn_time timebtn_play btn btn-secondary">
+                <i class="bi bi-play-fill"></i>
+            </button>
+
+            <button type="button" class="btn_time timebtn_stop btn btn-dark">
+                <i class="bi bi-pause-fill"></i>
+            </button>
+        </div>
+
         <div id="thumbnails" class="row position-relative">
+
 
             <!-- button prev -->                
             <div class="col p-0 position-absolute">
