--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
         <!-- Buttons Play-Stop -->
         <div class="p-0 position-absolute timebtn">
 
+            <button type="button" class="btn_time timebtn_prev btn btn-secondary">
+                <i class="bi bi-caret-left-fill"></i>
+            </button>
+
             <button type="button" class="btn_time timebtn_play btn btn-secondary">
                 <i class="bi bi-play-fill"></i>
             </button>
